[package]
name = "ConnectionRustSql"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", feature = ["derive"]}
serde_json = "1.0.1"
env_logger = "0.11.3"
dotenv = "0.15.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros"] }

